--- a/src/app/summoner/summoner.tpl.html
+++ b/src/app/summoner/summoner.tpl.html
@@ -2,55 +2,33 @@
 
     <h2>Summoner</h2>
 
-    <div ui-view="summonerSearch" ng-if="!summonerName"></div>
+    <div ui-view="summonerSearch"></div>
 
-    <div style="width: 100%; height: 128px; position: relative;" ng-if="summonerName">
-        <div style="width: 128px; height: 128px; position: absolute; top: 0; left: 0;" ng-if="profileIconUrl" class="animate-if">
-            <img ng-src="{{ profileIconUrl }}" style="float: left;"/>
+    <div style="width: 100%; height: 100px; position: relative;" ng-if="summonerName">
+        <div style="width: 100px; height: 100px; position: absolute; top: 0; left: 0;" ng-if="profileIconUrl"
+             class="animate-if">
+            <img ng-src="{{ profileIconUrl }}" style="float: left;" width="100" height="100"/>
 
-            <div style="position: absolute; bottom: 0px; right: 0px; padding: 5px; font-size: 20px; color: #ffffff; background-color: #000000;">
+            <div style="position: absolute; bottom: 2px; right: 2px; padding: 5px; font-size: 10px; color: #ffffff; background-color: #000000; opacity: 0.7">
                 {{summoner.summonerLevel}}
             </div>
         </div>
-        <div style="position: absolute; left: 128px; padding-left: 5px; line-height: 100px; font-size: 50px; color: #ffffff; text-shadow: 4px 3px 0px #1d9d74, 9px 8px 0px rgba(0, 0, 0, 0.15);">
+        <div style="position: absolute; left: 100px; padding-left: 5px; line-height: 50px; font-size: 25px; color: #ffffff; text-shadow: 10px 4px 10px #1d9d74, 2px 2px 2px rgba(0, 0, 0, 0.15);">
             {{ summoner.name }}
         </div>
     </div>
-    <div ng-if="recentGames" class="animate-if">
-
-        <h3>Histórico de Partidas</h3>
-
-        <div ng-if="showHistory" ng-repeat="game in recentGames.games" class="animate-if">
-            <div style="background-color: red; color: white;">
-
-                {{game.gameMode}} - {{game.gameType}} - {{ game.createDate | date: "dd/MM/yyyy 'às' h:mma" }}
-
-            </div>
-            <div style="background-color: forestgreen;">
-
-                <div style="background-color: #000066; color: white;">
-
-                    <div style="background-color: {{ game.teamId === 100 ? 'blue' : 'purple' }}">
-                        <img ng-src="{{ squareMap[game.championId] }}" width="40" height="40"> {{ summoner.name }}
-
-                    </div>
-
-                    <div ng-repeat="player in game.fellowPlayers | orderBy : 'teamId' : game.teamId===200">
-
-                        <div style="background-color: {{ player.teamId === 100 ? 'blue' : 'purple' }}">
-                            <img ng-src="{{ squareMap[player.championId] }}" width="40" height="40">
-                            {{ playersInfoMap[player.summonerId].name }}
-                        </div>
-
-                    </div>
-                </div>
-
-            </div>
-            <br/>
-
-
-        </div>
+    <br/>
+    <div ng-if="showHistory" class="container panel animate-if" style="min-height: 200px; background: #f3f3f3;">
+        <tabset>
+            <tab heading="Resumo" select="tab1 = true; tab2 = false; tab3 = false">
+                <div class="container">Resumo</div>
+            </tab>
+            <tab heading="History" select="tab1 = false; tab2 = true; tab3 = false">
+                <div ui-view="summonerHistory"></div>
+            </tab>
+        </tabset>
     </div>
+
 
 </div>
 
